2011-08-09  Robert Larice
 * src/spicelib/analysis/dcpss.c :
   a series of four cleanup patches
    remove unsed variable `cont_1'
    reduce scope of variable `tv_01', and use `MAX'
    reduce scope of variables `fproj' and `err'
    reduce scope of variable `temp'

2011-08-09  Robert Larice
 * src/main.c
 * src/frontend/plotting/graf.c
 * src/frontend/plotting/grid.c
 * src/frontend/plotting/x11.c
 * src/frontend/wdisp/windisp.c
 * src/spicelib/analysis/acan.c
 * src/spicelib/analysis/dcop.c
 * src/spicelib/analysis/dctran.c
 * src/spicelib/analysis/dctrcurv.c
 * src/spicelib/analysis/distoan.c
 * src/spicelib/analysis/pzan.c
 * src/spicelib/parser/inpeval.c
 * src/spicelib/parser/inpptree.c
   rewrite (double)literal  -->  floating-point-literal

2011-08-08  Holger Vogt
 * src/frontend/com_fft.c, src/maths/fft/fftext.c, fftext.h,
   fftlib.c, fftlib.h, matlib.c, matlib.h: convert float to double
 * winmain.c: increase text output buffer

2011-08-08  Robert Larice
 * src/xspice/cm/cmutil.c :
   ngspice.h always must be the first included file
     because of "man feature_test_macros(7)"

2011-08-08  Robert Larice
 * src/spicelib/analysis/dcpss.c :
   rewrite pointer dereferences to array subscripts

2011-08-07  Robert Larice
 * src/misc/util.c :
   rewrite ngdirname()

2011-08-07 Paolo Nenzi
 * (new) examples/pss ,
 * (new) examples/pss/colpitt_osc_pss.cir ,
 * (new) examples/compl_cross_quad_osc_pss.cir ,
 * (new) examples/hartley_osc_pss.cir ,
 * (new) examples/ring_osc_pss.cir ,
 * (new) examples/vackar_osc_pss.cir ,
 * (new) examples/vdp_osc_pss.cir :
   Moved example files for pss from Stefano Perticaroli from tests/ to the examples directory.

2011-08-07  Robert Larice
 * src/xspice/cmpp/mod_lex.l :
  allow '//' comments in xspice code models
  Bugs item #3387331 `Be careful when using "//"  in codemodel sources'
     https://sourceforge.net/tracker/?func=detail&atid=423915&aid=3387331&group_id=38962

2011-08-07  Robert Larice
 * src/frontend/shyu.c :