@@ -1,4 +1,8 @@
 2011-08-09  Robert Larice
+ * src/maths/misc/equality.c :
+   swallow some warnings, and use <stdint.h>
+
+2011-08-09  Robert Larice
  * src/spicelib/analysis/dcpss.c :
    a series of four cleanup patches
     remove unsed variable `cont_1'
